# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md  emulator.cpp  emulator.hpp  keyboardhandler.cpp  keyboardhandler.hpp  main.cpp  renderer.cpp  renderer.hpp  vcpkg.json
src/: emulator.cpp  emulator.hpp  keyboardhandler.hpp  main.cpp  renderer.cpp
tests/: CMakeLists.txt  opcodetest.cpp
